src/components/FocusTimer/FocusTimerDetailed.css
.focus-detailed-reset-icon {
  cursor: pointer;
}

.focus-detailed-reset-icon:hover {
  transform: scale(1.05);
}

.focus-detailed-reset-icon:active {
  transform: scale(0.95);
}

.reset-icon {
  position: relative;
  top: 50%;
  left: 80%;
  width: 10%;
}

.focus-detailed-circular-progress-bar {
  margin: 0 auto;
  width: 65vmin;
  height: 65vmin;
  text-align: center;
  border-radius: 100%;
  box-shadow: -50px -50px 100px var(--secondary-accent-color),
    50px 50px 100px var(--secondary-accent-color);
  cursor: pointer;
}

.focus-timer-elapsing {
  color: var(--primary-text-color);
  font-size: 7vmin;
}

.focus-timer-next {
  font-family: 'Inter', Helvetica, sans-serif;
  color: var(--primary-text-color);
  font-size: 4vmin;
  font-weight: 600;
  letter-spacing: 0.36px;
}

.CircularProgressbar-path {
  stroke: var(--primary-accent-color);
}
.CircularProgressbar-trail {
  stroke: var(--secondary-accent-color);
}
.CircularProgressbar-text {
  fill: var(--primary-text-color);
}

.focus-detailed-circular-progress-bar:active {
  transform: scale(0.98);
}

.focus-done-day {
  padding-top: 5%;
  color: var(--primary-text-color);
  font-family: 'Inter', Helvetica, sans-serif;
  font-size: var(--text-heading);
  font-weight: 600;
  letter-spacing: -0.01em;
  line-height: 1.3;
}

.focus-history {
  color: var(--primary-text-color);
  font-family: 'Inter', Helvetica, sans-serif;
  font-size: var(--text-caption);
  font-weight: 400;
  display: flex;
  gap: 1rem;
  width: 85%;
}

.focus-history-yesterday,
.focus-history-overall {
  flex: 1;
  background-color: var(--tertiary-bg-color);
  border-radius: 10px;
  padding: 1rem;
  text-align: center;
}

/* Media query for medium-sized screens (e.g., tablets) */
@media only screen and (min-width: 768px) and (max-width: 1024px) {
  .focus-detailed-circular-progress-bar {
    width: 20vw;
    height: 20vw;
  }
}

/* Media query for larger screens (e.g., desktops) */
@media only screen and (min-width: 1025px) {
  .focus-detailed-circular-progress-bar {
    width: 25vmin;
    height: 25vmin;
  }
}

